feat: add note comments and payment workflows